tests/ui/frontmatter/frontmatter-invalid-trailing-text.rs
---
//~^ ERROR expected item, found `-`
--- text

#![feature(frontmatter)]

fn main() {
}
